--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -8,39 +8,23 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="assets/lib/font awesome/all.min.css">
   <link rel="stylesheet" href="assets/lib/materialize/material-icons.css">
-  <link rel="stylesheet" href="assets/lib/materialize/materialize.min.css">
-  <link rel="stylesheet" href="assets/lib/owl/owl.carousel.min.css">
+<style>
 
-  <style>
-
-    .paper{
-      background: #f4f4ef
-    }
-
-    .p-1{
-      padding: 1rem
-    }
-
-    .font-bold{
-      font-weight: bold;
-    }
-
-.rule{
-    display: block;
-    width: 100px;
-    height: 4px;
-    position: relative;
-    left: 50%;
-    transform: translateX(-50%);
-    top: 1rem
-}
-
-    @font-face{
-        font-family: 'Panton';
-        font-style: normal;
-        src: url(assets/font/PantonDemo-Black.otf)
-      }
-  </style>
+@font-face{
+    font-family: 'andika';
+    font-style: normal;
+    src: url(assets/font/AndikaNewBasic-Regular.ttf)
+  }
+  *{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+  }
+  body{
+    font-family: 'andika';
+    background: #efeff4;
+  }
+</style>
 </head>
 <body class="paper">
 
@@ -49,32 +33,7 @@
   <app-root></app-root>
 
 
-  <script src="assets/lib/jQuery/jquery.min.js"></script>
   <script src="assets/lib/font awesome/all.js"></script>
-  <script src="assets/lib/materialize/materialize.min.js"></script>
-  <script src="assets/lib/owl/owl.carousel.min.js"></script>
-  <script>
-     //initializing  materialize functions
-    //  sidenav
-    document.addEventListener('DOMContentLoaded', function(){
-      var elems = document.querySelectorAll('.sidenav');
-      var instances = M.Sidenav.init(elems)
-    })
 
-    $(document).ready(function(){
-      $('.dropdown-trigger').dropdown();
-      $('.collapsible').collapsible()
-      
-    })
-
-    $(document).ready(()=>{
-      $('.tooltipped').tooltip()
-    })
-
-
-    // slider
-
-
-  </script>
 </body>
 </html>
